--- a/fd.html
+++ b/fd.html
@@ -23,6 +23,8 @@
         <img class="animate__animated animate__slideInUp" src="astronaut2.png" id="img2">
     </div>
 
+    <!-- contoh -->
+
     <div>
         <form id="forum" class="animate__animated animate__slideInUp shadow p-3 mb-5 bg-white rounded">
             <div class="form-group">
